# RoboCup

JuegoGC/: CJuego.cpp  CJuego.h  CMakeLists.txt  Goalkeeper.cpp  Goalkeeper.h  main.cpp  nao@192.168.11.201  nao@192.168.11.202  qiproject.xml
JuegoGC/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake
